# ausra_comms

./: .gitignore  HARDWARE_NAVIGATION_SETUP.md  README.md
ausra_comms/: package.xml  setup.py
ausra_comms/ausra_comms/: __init__.py  fake_robot_pub.py  map_decompressor_node.py  relay_node.py
ausra_comms/config/: zenoh_bridge_jetson.json5
ausra_comms/launch/: hardware_with_comms.launch.py
ausra_comms_backup/: package.xml  setup.cfg  setup.py
ausra_comms_backup/ausra_comms/: relay_node.py
ausra_comms_backup/docs/: LAPTOP_JETSON_TEST_GUIDE.md  LAPTOP_ONLY_TESTING.md  MODE_A_RUNBOOK.md  SYSTEM_ARCHITECTURE.md  USAGE.md
ausra_comms_backup/launch/: base_station_comms.launch.py  map_merge.launch.py  robot_comms.launch.py
ausra_comms_backup/scripts/: start_base_2robots.sh  start_comms_2robots.sh  start_single_robot_test.sh
ausra_comms_base/: package.xml  setup.cfg  setup.py
ausra_comms_base/ausra_comms_base/: __init__.py  fake_robot_pub.py  map_decompressor_node.py
ausra_comms_base/config/: map_merge_swarm_params.yaml  zenoh_bridge_laptop.json5
ausra_comms_base/docs/: COMMUNICATION_ARCHITECTURE.md  DEPLOYMENT_2JETSONS.md  DEPLOYMENT_DECENTRALIZED.md  FUTURE_WORK.md  SYSTEM_ARCHITECTURE.md  ZENOH_GUIDE.md
ausra_comms_base/launch/: base_station.launch.py  map_merge.launch.py
ausra_comms_base/scripts/: start_base.sh
ausra_map_merge_HW/: CMakeLists.txt  package.xml
ausra_map_merge_HW/config/: map_merge_HW_params.yaml
ausra_map_merge_HW/docs/:  ArUco_Fiducials_Implementation_Guide.md   explaining_the_system.md  AUSRA_Hardware_Map_Merge_SOP.md  how_i_can_make_map_merge_on_each_robot.md  package_creation_summary.md  single_robot_hw_test_validation.md
ausra_map_merge_HW/docs/Multi_robot/: Centralized_Map_Merge_Architecture.md  Instructions_launch.txt  Multi_Robot_Hardware_Upgrade_Guide.md  architecture_review.md
ausra_map_merge_HW/launch/: map_merge_hw.launch.py
ausra_map_merge_HW/src/: map_expansion_node.cpp
decentralized_jetson_offline/: decentralized_robot.launch.py  install_instructions.txt  zenoh_bridge_jetson_decentralized.json5
docs/: NETWORKING_GUIDE.md  TIME_SYNC_GUIDE.md
