<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  ============================================================
  FILE: package.xml
  RUNS ON: All machines (Robot 1, Robot 2, Robot 3, Laptop)
  PURPOSE: ROS2 package manifest for ausra_comms.

  PLACEHOLDERS: None
  ============================================================
-->
<package format="3">
  <name>ausra_comms</name>
  <version>0.1.0</version>
  <description>Communication layer and launch files for 3-robot swarm Search and Rescue system</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>multirobot_map_merge</exec_depend>
  <exec_depend>ausra_map_merge_HW</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
