<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ausra_map_merge_HW</name>
  <version>1.0.0</version>
  <description>
    Hardware deployment variant of ausra_map_merge for physical AUSRA robots.
    Adapted from the validated Gazebo simulation package to work with the
    hardware_full_stack.launch.py stack (global namespace, /map SLAM topic,
    ausrabot_* TF frames).
  </description>
  <maintainer email="ausra@team.local">AUSRA Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>

  <exec_depend>multirobot_map_merge</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
